k8s/registry/downstream/registry.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: registry
spec:
  type: ClusterIP
  ports:
    - port: 5000
      protocol: TCP
      name: registry
      targetPort: 5000
  selector:
    app: registry
    release: registry
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: registry
spec:
  selector:
    matchLabels:
      app: registry
      release: registry
  replicas: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: registry
        release: registry
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      containers:
        - name: registry
          image: "registry:2.7.1"
          imagePullPolicy: IfNotPresent
          command:
          - /bin/registry
          - serve
          - /etc/docker/registry/config.yml
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /
              port: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
          resources:
            {}
          volumeMounts:
            - name: auth
              mountPath: /auth
              readOnly: true
            - name: data
              mountPath: /var/lib/registry/
            - name: registry-config
              mountPath: "/etc/docker/registry"
      volumes:
        - name: auth
          secret:
            secretName: registry-config
            items:
            - key: htpasswd
              path: htpasswd
        - name: data
          emptyDir: {}
        - name: registry-config
          configMap:
            name: registry-config
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry
  namespace: registry
spec:
  rules:
  - host: HOST
    http:
      paths:
      - backend:
          serviceName: registry
          servicePort: 5000
        path: /
